# VMagic

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  run.command  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs  validation.rs
src/components/: BatchFileList.tsx  BatchProgress.tsx  ConvertButton.tsx  FpsSettings.tsx  OutputPreview.tsx  OutputSelector.tsx  ProgressBar.tsx  VideoDropZone.tsx  VideoInfo.tsx
src/hooks/: useBatchConvert.ts  useConvert.ts  useVideoInfo.ts
src/lib/: presets.ts  tauri-commands.ts
src/types/: video.ts
